<resources>
    <string name="app_name">Medicly Dashboard</string>
    <string name="appointment_scheduling">Appointment Scheduling</string>
    <string name="medical_records">Medical Records</string>
    <string name="medical_clinic_scheduling">Medical Clinic \nLocator</string>
    <string name="account_settings">Account Settings</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="hello_user">HELLO USER!</string>
</resources>